# dslray

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
design_handoff_file_tree/: DSL Studio.dc.html  README.md
icon_handoff/: CODEX_TASK.md  README_FOR_CLAUDE_CODE_OR_CODEX.md  icon_manifest.json
icon_handoff/platform/macos/: Info.plist.icon.fragment.xml
icon_handoff/qt/snippets/: CMakeLists_icons_snippet.txt  main_cpp_set_icon.cpp  qmake_icons_snippet.pro
icon_handoff/resources/: dslray_icons.qrc
platform/windows/: dslray.rc
qml/: Main.qml
qml/components/: BoardPanel.qml  CodeEditor.qml  FileTabs.qml  FilesPanel.qml  MenuOverlay.qml  PanelFrame.qml  PropertiesPanel.qml  StatusBar.qml  StructurePanel.qml  Toolbar.qml
qml/theme/: Theme.qml
resources/icons/: dslray_icon.icns
samples/: demo.json
src/: documentcontroller.cpp  documentcontroller.h  jsonhighlighter.cpp  jsonhighlighter.h  main.cpp  projectcontroller.cpp  projectcontroller.h  projecttreemodel.cpp  projecttreemodel.h
